[tool.poetry]
name = "pb-admin"
version = "0.1.13"
description = ""
authors = ["vaclav-v"]
readme = "README.md"
packages = [{include = "pb_admin"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
requests = "^2.31.0"
bs4 = "^0.0.1"
pydantic = "^2.4.2"
requests-toolbelt = "^1.0.0"
pillow = "^10.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
